--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "core"]
 	path = core
-	url = git@github.com:NYPL/Simplified-server-core.git
+	url = https://github.com/NYPL/Simplified-server-core.git
