Added ndg-httpsclient requirement.

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,9 @@ mock
 cairosvg
 Flask-Babel
 
+# Ensure that we support SNI-based SSL
+ndg-httpsclient
+
 # Used only by metadata
 pyld
 beautifulsoup4
