--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Core requirements
+boto3
 pillow
 psycopg2
 requests==2.18.4
@@ -9,7 +10,6 @@ flask
 flask-sqlalchemy-session
 textblob
 isbnlib
-tinys3==0.1.12
 feedparser
 elasticsearch
 uwsgi
