--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core requirements
 boto3
 elasticsearch==2.1.0
+elasticsearch-dsl<2.0.0
 pillow
 psycopg2
 requests==2.18.4
@@ -12,7 +13,6 @@ flask-sqlalchemy-session
 textblob
 isbnlib
 feedparser
-elasticsearch
 uwsgi
 pycrypto
 python-dateutil
