--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ psycopg2
 requests==2.18.4
 sqlalchemy==1.1.15
 nose
+urllib3<1.24 # Travis problem introduced 20181016 - check to see when we can remove
 lxml
 flask
 flask-sqlalchemy-session
