--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Core requirements
 boto3
-elasticsearch==2.1.0
-elasticsearch-dsl<2.0.0
+elasticsearch>6.0.0,<7.0.0
+elasticsearch-dsl>6.0.0,<7.0.0
 pillow
 psycopg2
 requests==2.18.4
@@ -32,7 +32,7 @@ ndg-httpsclient
 # Used only by metadata
 pyld
 beautifulsoup4
-suds
+zeep
 py-bcrypt
 pyjwt==1.4.2
 
