--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ money
 pymarc
 accept-types
 watchtower # for cloudwatch logging
-spellchecker
+pyspellchecker
 
 # Ensure that we support SNI-based SSL
 ndg-httpsclient
