--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,6 @@ urllib3<1.24 # Travis problem introduced 20181016 - check to see when we can rem
 lxml
 flask
 flask-sqlalchemy-session
-textblob
 isbnlib
 feedparser
 uwsgi
@@ -26,6 +25,10 @@ pymarc
 accept-types
 watchtower # for cloudwatch logging
 pyspellchecker
+
+# nltk is a textblob dependency, and this is the last release that supports Python 2
+nltk==3.4.5
+textblob
 
 # Ensure that we support SNI-based SSL
 ndg-httpsclient
