Testing submodule update

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ money
 pymarc
 accept-types
 watchtower # for cloudwatch logging
-pyspellchecker
+pyspellchecker==0.5.6
 
 # nltk is a textblob dependency, and this is the last release that supports Python 2
 nltk==3.4.5
