--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,15 @@
 -r core/requirements.txt
 
-urllib3<1.24 # Travis problem introduced 20181016 - check to see when we can remove
-flask-sqlalchemy-session
-pycrypto
-cairosvg==1.0.22
 accept-types
-pyspellchecker==0.5.6
-
+beautifulsoup4==4.9.1
+cairosvg==1.0.22
 # Ensure that we support SNI-based SSL
-ndg-httpsclient
-
+ndg-httpsclient==0.5.1
+pycrypto
+PyJWT==1.4.2
 # Used only by metadata
-pyld==1.0.5
-beautifulsoup4
-zeep
-pyjwt==1.4.2
-
+PyLD==1.0.5
 # for author name matching
-python-Levenshtein
+python-Levenshtein==0.12.0
+# urllib3<1.24 # Travis problem introduced 20181016 - check to see when we can remove
+zeep==3.4.0
