--- a/docker/Dockerfile.scripts
+++ b/docker/Dockerfile.scripts
@@ -1,4 +1,4 @@
-FROM phusion/baseimage
+FROM phusion/baseimage:bionic-1.0.0
 MAINTAINER Library Simplified <info@librarysimplified.org>
 
 ARG version
