--- a/docker/Dockerfile.webapp
+++ b/docker/Dockerfile.webapp
@@ -1,4 +1,4 @@
-FROM phusion/baseimage
+FROM phusion/baseimage:bionic-1.0.0
 MAINTAINER Library Simplified <info@librarysimplified.org>
 
 ARG version
